Cambios getLast()